Return to separate html elements for truncated filename and file extension, mark them as aria-hidden to avoid redundant screen reading with the container's aria-label, and return to non-monospaced font.
[#176446770]

--- a/src/main/resources/static/shiba.css
+++ b/src/main/resources/static/shiba.css
@@ -669,9 +669,6 @@ input[type=number] {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: clip;
-
-    font-family: monospace;
-    font-weight: lighter;
 }
 
 .filename-text-name {
